# CRM

./: .gitignore  README.md  pyproject.toml  variables.env
crm/: settings.py  urls.py
crm/applications/phonebook/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
crm/applications/phonebook/migrations/: 0001_initial.py
crm/applications/phonebook/models/: __init__.py  communication.py  contact.py  contact_methods.py  employee.py  organization.py  person.py
crm/applications/phonebook/nested_models/: organization.py  person.py
crm/applications/phonebook/nested_serializers/: person.py
crm/applications/phonebook/serializers/: __init__.py  contact.py  contact_methods.py  django_framework.py  employee.py  organization.py  person.py
crm/applications/phonebook/views/: __init__.py  contact.py  contact_methods.py  employee.py  organization.py  person.py
